--- a/app/src/main/res/layout-land/fragment_artist_info.xml
+++ b/app/src/main/res/layout-land/fragment_artist_info.xml
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/padding_8dp"
             android:padding="@dimen/padding_4dp"
-            android:text="Artist Albums"
+            android:text="@string/artist_albums"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/artistDescription" />
