--- a/app/src/main/res/layout/item_placeholder_album.xml
+++ b/app/src/main/res/layout/item_placeholder_album.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/margin_8dp"
     app:cardUseCompatPadding="true">
 
@@ -18,26 +18,26 @@
             android:id="@+id/posterTitle"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:background="@color/black"
-            android:alpha="0.2"/>
+            android:alpha="0.2"
+            android:background="@color/black" />
 
         <View
             android:id="@+id/artistNameTextTitle"
             android:layout_width="match_parent"
             android:layout_height="14dp"
-            android:background="@color/black"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/margin_8dp"
             android:alpha="0.2"
-            android:layout_gravity="center"/>
+            android:background="@color/black" />
 
         <TextView
             android:id="@+id/lyricsTitleTextTitle"
             android:layout_width="match_parent"
             android:layout_height="14dp"
-            android:background="@color/black"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/margin_4dp"
             android:alpha="0.2"
-            android:layout_gravity="center" />
+            android:background="@color/black" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.cardview.widget.CardView>
