--- a/app/src/main/res/layout-land/fragment_main.xml
+++ b/app/src/main/res/layout-land/fragment_main.xml
@@ -95,23 +95,13 @@
         tools:listitem="@layout/item_main_search_result" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/artistRVMock"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/music_alpha"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/artistHeaderTextView" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/lyricsRVMock"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/music_alpha"
+        android:id="@+id/emptyDataImageView"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:src="@drawable/music_search_icon_64"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/verticalGuideline"
-        app:layout_constraintTop_toBottomOf="@id/lyricsHeaderTextView" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
