--- a/app/src/main/res/layout-land/shimmering_album_placeholder.xml
+++ b/app/src/main/res/layout-land/shimmering_album_placeholder.xml
@@ -64,6 +64,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_8dp" />
+
+        <include
+            layout="@layout/item_placeholder_album"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_8dp" />
     </GridLayout>
 
 </com.facebook.shimmer.ShimmerFrameLayout>
