--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,7 +14,7 @@
     <dimen name="margin_4dp">4dp</dimen>
     <dimen name="item_album_track">14sp</dimen>
     <dimen name="songs_lyrics_text_size">16sp</dimen>
-    <dimen name="song_title_text_sie">18sp</dimen>
+    <dimen name="song_title_text_size">18sp</dimen>
     <dimen name="artist_name_text_size">16sp</dimen>
     <dimen name="background_lyrics_height">250dp</dimen>
     <dimen name="release_date_text_size">12sp</dimen>
