--- a/app/src/main/res/layout-land/fragment_main.xml
+++ b/app/src/main/res/layout-land/fragment_main.xml
@@ -96,8 +96,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/emptyDataImageView"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/music_search_icon_64"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
