add adaptive launch icon

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="dark_velvet">#28293C</color>
     <color name="nude">#D54A73</color>
     <color name="pastel">#8C637B</color>
+    <color name="ic_new_launcher_background">#FCF3F3</color>
 </resources>
