--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -24,7 +24,7 @@
 
     <style name="ThemeSingItOut.SplashScreenStyle" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/velvet</item>
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_new_launcher</item>
         <item name="postSplashScreenTheme">@style/ThemeSingItOut</item>
     </style>
 </resources>
